kubernetes/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: resumatch-ai
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        fsGroup: 10001
      serviceAccountName: backend
      containers:
      - name: backend
        image: us-east1-docker.pkg.dev/resumeai-503317/resumatches-official/backend:latest
        imagePullPolicy: Always
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        ports:
        - containerPort: 8090
        resources:
          #limits:
            #cpu: "500m"
            #memory: "1024Mi"
          requests:
            cpu: "25m"
            memory: "256Mi"
        livenessProbe:
          httpGet:
            path: /health
            port: 8090
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /health
            port: 8090
          initialDelaySeconds: 5
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: resumatch-ai
  labels:
    app: backend
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8090
    targetPort: 8090
    protocol: TCP
  selector:
    app: backend
